@@ -1,3 +1,11 @@
+From 817f6a7 (closure-adv):
+==========================
+
+In prisim/bispectrum_phase.py,
+
+(*) Modify member function FT() of class ClosurePhaseDelaySpectrum
+to compute delay spectrum of subtract model and residuals.
+
 From 0cf9822 (closure-adv):
 ==========================
 
